# foxhole

./: .gitignore  README.md  annotation_pool.json  annotation_pool1.json  pyproject.toml  pytest.ini  search_engine.py  xrels.json
.github/workflows/: push.yaml  pytest.yaml  release.yaml
benchmark_scripts/: README  benchmark.py  pilot.py  prepilot.py
benchmark_scripts/00-data/: comparative_prompt.txt  direct_prompt.txt  justification_prompt.txt  prompt.txt  queries.tsv  queries_full.tsv  queries_pilot_dev.tsv  queries_pilot_full.tsv  step_prompt.txt  verbose_prompt.txt
benchmark_scripts/02_pilot_out/: 03_metrics.json
benchmark_scripts/03_benchmark/: 01_ann.db  03_metrics.json
benchmark_scripts/data/: queries.tsv
eval/: README  annotate.py  concat_db.py  create_eval_dataset.py  create_trec_dataset.py  queries.tsv  queries.txt  test.sh
foxhole/: annotate.py  call_llm.py  cli.py  config.py  evaluation.py  install.py  native.py  prune.py  search.py
foxhole/_native/: README  host.py
foxhole/eval/: annotate.py  concat_db.py  llm.py  metrics.py
tests/: test_build_annotation.py  test_call_llm.py  test_chroma.py  test_evaluation.py  test_ignore.py  test_list_documents.py  test_pruning.py  test_pruning.sh  test_search.py  test_tfidf.py  test_view_document.py  utils.py
webextension/: amo_metadata.json  background.js  manifest.json
