[project]
name = "foxhole"
version = "0.0.1"
authors = [
    {name="Gustaf Gren", email="6107181+skogsgren@users.noreply.github.com"},
]
description = "Text search for Firefox history"

[project.scripts]
foxhole= "foxhole.cli:main"
foxhole-install = "foxhole.install:install_native_host"
foxhole-prune = "foxhole.prune:main"
foxhole-ls = "foxhole.cli:list_documents"
foxhole-view = "foxhole.cli:view_document"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["foxhole"]

[tool.ruff]
select = ["E", "F", "I"]
